FILE(GLOB EXAMPLES_CPP RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")

FOREACH(EXAMPLE_CPP ${EXAMPLES_CPP})
	STRING(REGEX REPLACE ".cpp\$" "" EXAMPLE "${EXAMPLE_CPP}")
	AddLibShogunExample(${EXAMPLE_CPP})
	LIST(APPEND EXAMPLE_TARGETS ${EXAMPLE})
ENDFOREACH()

INSTALL(TARGETS ${EXAMPLE_TARGETS}
	DESTINATION share/shogun/examples/libshogun/
	COMPONENT minimal-example)
